--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -9,6 +9,7 @@
 @import (reference) "../../customize/src/less2/include/creation.less";
 @import (reference) '../../customize/src/less2/include/framework.less';
 @import (reference) '../../customize/src/less2/include/export.less';
+@import (reference) '../../customize/src/less2/include/admin.less';
 
 .cp-admin-customize-apps-grid {
     padding: 10px;
@@ -69,6 +70,7 @@
     .sidebar-layout_main();
     .limit-bar_main();
     .creation_main();
+    .admin_main();
 
     display: flex;
     flex-flow: column;
@@ -86,6 +88,16 @@
         border-radius: 5px;
         background-color: @cryptpad_color_brand;
     }
+    input.cp-admin-color-picker {
+        vertical-align: middle;
+    }
+    .cp-palette-container {
+        display: inline-flex;
+        width: ~"calc(100% - 5rem)";
+        padding-left: 0.5rem;
+        vertical-align: middle;
+    }
+
     .cp-admin-color-preview {
         & > div {
             margin-top: @sidebar_base-margin;
