--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -26,13 +26,13 @@
     padding: 10px;
 }
 
-.active-app {
-    background-color: #323232!important;
+.cp-active-app {
+    background-color:  #323232!important;
     max-width:30%;
 }
 
-.inactive-app {
-    background-color: #424242!important;
+.cp-inactive-app {
+    background-color:#424242!important; 
     max-width:30%;
 }
 
