--- a/www/install/onboarding.less
+++ b/www/install/onboarding.less
@@ -203,10 +203,10 @@ nav.cp-onboardscreen-nav {
 //     padding: 10px;
 // }
 
-// .active-app {
-//     background-color: #212121!important;
-//     max-width:30%;
-// }
+.cp-active-app {
+    background-color: #212121!important;
+    max-width:30%;
+}
 
 // .cp-admin-customize-options-grid {
 //     height:40%;
