add focus to remove user button

--- a/customize.dist/src/less2/include/alertify.less
+++ b/customize.dist/src/less2/include/alertify.less
@@ -198,7 +198,7 @@
                         text-decoration: none;
                     }
                 }
-                .cp-usergrid-user, textarea, a  {
+                .cp-usergrid-user, textarea, a, .fa-times  {
                     outline: none;
                     &:focus {
                         outline: @cryptpad_color_brand solid 2px;
