--- a/customize.dist/src/less2/include/usergrid.less
+++ b/customize.dist/src/less2/include/usergrid.less
@@ -115,7 +115,8 @@
                 }
             }
             .fa-times {
-                padding-left: 5px;
+                border-radius: @variables_radius;
+                margin-left: 5px;
                 cursor: pointer;
                 height: 100%;
                 line-height: 25px;
