--- a/www/kanban/app-kanban.less
+++ b/www/kanban/app-kanban.less
@@ -196,7 +196,7 @@
         background: transparent;
         align-self: flex-start;
         outline-style: none;
-        border-radius: 5px;
+        border-radius: @variables_radius;
         &:focus {
             outline: @cryptpad_color_brand solid 2px;
         }
