--- a/customize.dist/src/less2/include/toolbar.less
+++ b/customize.dist/src/less2/include/toolbar.less
@@ -774,7 +774,7 @@
                 padding: 10px;
                 color: @toolbar-bg-color;
                 color: var(--toolbar-bg-color);
-                border-radius: 5px;
+                border-radius: @variables_radius;
 
                 span {
                     font-size: 45px;
