--- a/customize.dist/src/less2/include/admin.less
+++ b/customize.dist/src/less2/include/admin.less
@@ -39,30 +39,39 @@
 
     .cp-admin-customize-apps-grid, .cp-admin-customize-options-grid {
         display: grid;
-        gap: 0.25rem;
-        .cp-appblock {
-
-        }
+        gap: 0.5rem;
     }
 
     .cp-admin-customize-apps-grid {
         grid-template-columns: 1fr 1fr 1fr;
         .cp-appblock {
-            background-color: fade(@cryptpad_text_col, 10%);
-            padding: 0.3rem;
+            padding: 0.5rem;
             border-radius: @variables_radius;
             font-size: 1.2em;
             display: flex;
             flex-direction: row;
             align-items: center;
+            gap: 0.75rem;
             .iconColors_main();
+            &:hover {
+                cursor: pointer;
+            }
+            i.cp-icon {
+                font-size: 2.8rem;
+            }
+            .cp-app-name {
+                flex-grow: 1;
+            }
         }
         .cp-inactive-app {
+            background-color: transparent;
+            opacity: 0.75;
             .cp-on-enabled {
                 visibility: hidden;
             }
         }
         .cp-active-app {
+            background-color: fade(@cryptpad_text_col, 10%);
             .cp-on-enabled {
                 visibility: visible;
             }
@@ -70,7 +79,6 @@
     }
 
     .cp-admin-customize-options-grid {
-        display: grid;
         grid-template-columns: 1fr 1fr;
     }
 
