--- a/www/install/onboarding.less
+++ b/www/install/onboarding.less
@@ -25,6 +25,7 @@
         justify-content: center;
         align-items: center;
         .cp-onboarding-box {
+            width: 850px;
             background-color: @cp_loading-progress-bg;
             border-radius: @variables_radius_L;
             box-shadow: 0px 0px 10px 0px @cp_shadow-color;
@@ -54,12 +55,6 @@
     padding: 30px 110px 20px 110px;
 }
 
-// .cp-onboardscreen-form {
-//     // padding:10px;
-//     // position:relative;
-//     // height: 90%;
-// }
-
 .cp-onboardscreen-screentitle {
     text-align: center;
     font-size: 1rem;
@@ -75,7 +70,7 @@
 .cp-instance-form {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: 1rem;
     input, textarea {
         border: 0px transparent !important;
     }
@@ -122,119 +117,3 @@ nav.cp-onboardscreen-nav {
     justify-content: space-between;
     margin-top: 1rem;
 }
-
-
-// .cp-onboardscreen-name {
-//     width:70%; 
-//     float:right; 
-//     padding:10px
-// }
-
-// .cp-onboardscreen-desc {
-//     width:67% !important;
-//     float:right !important;
-//     padding:20px !important;
-//     margin-right:10px !important;
-// }
-
-// .cp-onboardscreen-logo {
-//     width:20%; 
-//     height:30%;
-//     float:left;
-//     margin-left:10px;
-// }
-
-
-// .kanban-colors(@kanban-colors; @index) when (@index > 0){
-//         // loop through the @colors
-//         .kanban-colors(@kanban-colors; (@index - 1));
-//         @color: extract(@kanban-colors, @index);
-//         // make a numbered class selector for each color
-//         .cp-kanban-palette-color@{index}{
-//             background-color: @color !important;
-//             &.cp-kanban-palette-board {
-//                 background-color: @color !important;
-//             }
-//             &.kanban-board-inner {
-//                 background-color: fade(@color, 50%) !important;
-//             }
-//         }
-//     }
-
-// .cp-onboardscreen-colorpick {
-//     padding-left:50%
-// }
-
-// .cp-onboardscreen-color {
-//     width:200%;
-//     height:20%;
-//     margin-left: -65%;
-//     margin-bottom: -10%;
-// }
-
-// .cp-onboardscreen-checkmark {
-//     text-align:right !important;
-//     color: white !important;
-// }
-
-// .cp-onboardscreen-nav {
-//     padding-left:90%;
-//     margin-right: -2px !important;
-//     margin-top: 300px;
-//     position:absolute;
-//     width:100%;
-//     display:float;
-// }
-
-// .cp-onboardscreen-prev {
-//     margin-left: 20px;
-//     left: 0;
-//     position: absolute;
-// }
-
-// .cp-onboardscreen-save {
-//     right: 0;
-//     position: absolute;
-//     margin-right: 40px
-// }
-
-// .cp-admin-customize-apps-grid {
-//     padding: 10px;
-//     margin-left: 10px;
-//     width: 105%;
-// }
-
-// .cp-appblock {
-//     width:30%;
-//     float:left !important;
-//     display:block !important;
-//     margin: 2px !important;
-//     background-color: #212121!important;
-//     border-color:white;
-//     height: 60px !important;
-//     padding: 10px;
-// }
-
-
-// .cp-admin-customize-options-grid {
-//     height:40%;
-//     float:center;
-//     margin-left: 20px;
-//     width: 105%;
-//     margin-bottom: -180px;
-
-// }
-
-// .cp-optionblock {
-//     width:40%;
-//     float:left !important;
-//     display:block !important;
-//     margin: 2px !important;
-//     background-color: #212121!important;
-//     border-color:white;
-//     height: 60% !important;
-//     padding: 10px;
-
-
-// }
-
