Add instance color presets

--- a/customize.dist/src/less2/include/admin.less
+++ b/customize.dist/src/less2/include/admin.less
@@ -12,11 +12,12 @@
     --LessLoader_require: LessLoader_currentFile();
 }
 & {
-    // XXX Instance accent color presets
+    // Instance accent color presets
     @palette-colors:
         @cryptpad_color_brand,
-        #ffee00,
-        #FF0073;
+        #de0064,
+        #8c52bc,
+        #3d7672;
 
     div.cp-palette-container {
 
