Fix instance color palette first color

--- a/customize.dist/src/less2/include/admin.less
+++ b/customize.dist/src/less2/include/admin.less
@@ -14,7 +14,7 @@
 & {
     // Instance accent color presets
     @palette-colors:
-        @cryptpad_color_brand,
+        #0087FF,
         #de0064,
         #8c52bc,
         #3d7672;
