--- a/customize.dist/src/less2/include/forms.less
+++ b/customize.dist/src/less2/include/forms.less
@@ -28,6 +28,9 @@
         }
         &.tui-full-calendar-content {
             font-size: @colortheme_app-font-size;
+            &:focus {
+                outline: @cryptpad_color_brand solid 2px;
+            }
         }
         &[readonly] {
             //margin-top:1rem;
