Add border to table

--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -199,6 +199,7 @@
                     .cp-sidebar-table#performance-profiling-table {
                         @media (max-width: 900px) {
                             width: 100%;
+                            border: 1px solid @cp_drive-icon-border;
 
                             tr {
                                 display: flex;
