--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -633,6 +633,9 @@
                             color: @cp_sidebar-left-active-fg;
                             border: 0px;
                         }
+                        &:focus {
+                            outline: @cryptpad_color_brand solid 2px;
+                        }
                         i {
                             margin-left: 5px;
                         }
