--- a/customize.dist/src/less2/include/sidebar-layout.less
+++ b/customize.dist/src/less2/include/sidebar-layout.less
@@ -174,6 +174,9 @@
                     }
                     .cp-sidebar-table {
                         margin-top: @sidebar_base-margin;
+                        tr {
+                            display: flex;
+                        }
                         pre {
                             margin: 0;
                         }
@@ -189,32 +192,15 @@
                                 margin-right: @sidebar_base-margin;
                             }
                         }
+                        th, td {
+                            flex: 1;
+                            word-wrap: break-word;
+                            white-space: normal;
+                            min-width: 13rem;
+                        }
                         tbody {
                             tr:nth-child(odd) {
                                 background-color: @cp_sidebar-left-item-bg;
-                            }
-                        }
-
-                    }
-                    .cp-sidebar-table#performance-profiling-table {
-                        @media (max-width: 900px) {
-                            width: 100%;
-                            border: 1px solid @cp_drive-icon-border;
-
-                            tr {
-                                display: flex;
-                                flex-wrap: wrap;
-                                align-items: center;
-                            }
-
-                            th, td {
-                                border: none;
-                                flex: 1 1 auto;
-                                width: 5rem;
-                                margin-right: 0;
-                                font-size: 13px;
-                                word-wrap: break-word;
-                                white-space: normal;
                             }
                         }
                     }
