Add horizontal scrollbar to table #1099

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -29,6 +29,10 @@
         }
     }
     #cp-sidebarlayout-container #cp-sidebarlayout-rightside .cp-sidebarlayout-element[data-item] .cp-sidebar-table#performance-profiling-table {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        overflow-x: auto;
         tr {
             display: flex;
         }
