More specific div selector #1099

--- a/www/admin/app-admin.less
+++ b/www/admin/app-admin.less
@@ -28,7 +28,7 @@
             max-height: 250px;
         }
     }
-    #cp-sidebarlayout-container #cp-sidebarlayout-rightside .cp-sidebarlayout-element[data-item] div {
+    #cp-sidebarlayout-container #cp-sidebarlayout-rightside .cp-sidebarlayout-element[data-item] div#performance-table-container {
         overflow-x: auto;
     .cp-sidebar-table#performance-profiling-table {
         tr {
