--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -44,7 +44,7 @@
             justify-content: center;
             align-items: flex-end;
             @media screen and (max-width: @browser_media-medium-screen) {
-                .btn-danger {
+                .btn-confirm{
                     line-height: inherit;
                     overflow-wrap: break-word;
                     white-space: normal;
