Implement review fixes #1406

--- a/customize.dist/src/less2/pages/page-install.less
+++ b/customize.dist/src/less2/pages/page-install.less
@@ -43,10 +43,13 @@
 
         nav {
             display: flex;
-            align-items: center;
+            align-items: flex-end;
             justify-content: flex-end;
 
             @media screen and (max-width: @browser_media-medium-screen) {
+                nav.btn-danger {
+                    line-height: inherit;
+                }
                .btn-confirm {
                     line-height: inherit;
                     overflow-wrap: break-word;
