--- a/www/settings/app-settings.less
+++ b/www/settings/app-settings.less
@@ -41,7 +41,7 @@
     .alertify {
         nav {
             display: flex;
-            justify-content: center;
+            justify-content: flex-end;
             align-items: flex-end;
             @media screen and (max-width: @browser_media-medium-screen) {
                 .btn-confirm{
