Make button appear at the top of the page for small screens #1370

--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -155,6 +155,9 @@
         }
         .tui-full-calendar-popup {
             border-radius: @variables_radius_L;
+            @media screen and (max-width : @browser_media-medium-screen){
+                bottom: 50%;
+            }
         }
         .tui-full-calendar-popup-container {
             min-width: 100%;
