--- a/www/calendar/app-calendar.less
+++ b/www/calendar/app-calendar.less
@@ -585,6 +585,18 @@
                     margin-top: 30px;
                 }
             }
+            @media screen and (max-width: @browser_media-medium-screen) {
+                .cp-calendar-entries {
+                    display: none;
+                }
+
+                .cp-calendar-entries.visible {
+                    display: block;
+                }
+            }
+            .cp-calendar-entries {
+                margin-bottom: 10px;
+            }
             .cp-calendar-entry {
                 display: flex;
                 align-items: center;
